--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,168 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
 </head>
+
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="#"></a>
+        <nav class="header__navigation">
+          <ul class="header__navigation-list">
+            <li class="header__navigation-item">
+              <a class="header__navigation-item" href="#">Home</a>
+            </li>
+            <li class="header__navigation-item">
+              <a class="header__navigation-item" href="#">Services</a>
+            </li>
+            <li class="header__navigation-item">
+              <a class="header__navigation-item" href="#">About</a>
+            </li>
+            <li class="header__navigation-item">
+              <a class="header__navigation-item" href="#">Product</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__buttons">
+          <button class="button button--bordered">Sign In</button>
+          <button class="button button--colored">Sign Up</button>
+        </div>
+      </div>
+    </div>
+  </header>
 
+  <section class="promo">
+    <div class="container">
+      <div class="promo__content">
+        <h1>The Design Thinking superpowers</h1>
+        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your
+          next user experience.</p>
+        <div class="promo__buttons">
+          <button class="button button--colored">Get started</button>
+          <a class="link-button" href="#">
+            <span class="ico ico--play"></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="tools">
+    <div class="container">
+      <div class="layout-4-column">
+        <div class="tool">
+          <div class="tool__icon">
+            <span class="icon-squared icon-squared--lilium"></span>
+          </div>
+          <h4>First click tests</h4>
+          <p>While most people enjoy
+            casino gambling,</p>
+        </div>
+      </div>
+      <div class="tools-button">
+        <button class="button button--colored">Sign Up Now</button>
+      </div>
+    </div>
+  </section>
 
+  <section class="strategies">
+    <div class="container">
+      <h2>Marketing strategies</h2>
+      <p class="strategies__descriptions">Join 40,000+ other marketers and get proven strategies on email marketing</p>
+      <div class="strategies__tags">
+        <span class="tag tag--selected">All</span>
+        <span class="tag tag--bordered">Art</span>
+        <span class="tag tag--bordered">Culture</span>
+        <span class="tag tag--bordered">Design</span>
+      </div>
+      <div class="layout-3-column">
+        <div class="strategy block-shadowed">
+          <img src="img/pic1.jpg" alt="strategy image">
+          <h3>Increasing Prosperity With Positive Thinking</h3>
+          <div class="strategy__tags">
+            <span class="tag tag--colored">Art</span>
+            <span class="tag tag--colored">Design</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about-us">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>
+        Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog. It also
+        shouldn’t be their last, because first impressions count online just as much as they do in the real world. If
+        your visitors aren’t impressed, you can expect them to leave without reading your awesome content or completing
+        a conversion action (e.g., signing up for your newsletter, making a purchase).
+      </p>
+      <div class="layout-3-column">
+        <div class="emploer block-shadowed">
+          <div class="employer__content">
+            <h5>Kathy Rosenberg</h5>
+            <p class="emploer__title">Product Mannager</p>
+            <a href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact-us">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <div class="layout-2-column">
+        <div class="contact-us__content">
+          <p>
+            Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog. It
+            also shouldn’t be their last, because first impressions count online just as much as they do in the real
+            world. If your visitors aren’t impressed, you can expect them to leave without reading your awesome content
+            or completing a conversion action (e.g., signing up for your newsletter, making a purchase).
+          </p>
+          <p>
+            <a href="#">
+              <span class="ico ico--phone"></span><a href="tel:+375223450099">+375 (22) 345-00-99</a>
+            </a>
+          </p>
+          <p>
+            <a href="#">
+              <span class="ico ico--letter"></span><a href="mailto:emailname@gmail.com">emailname@gmail.com</a>
+            </a>
+          </p>
+        </div>
+        <div class="contact-us__form">
+          <form action="#" method="post">
+            <div class="layout-2-column">
+              <input type="text" name="name" placeholder="Your name">
+              <input type="email" name="email" placeholder="Your mail">
+            </div>
+            <textarea name="quastion" cols="30" rows="10"></textarea>
+            <div class="contactus__button">
+              <button class="button button--colored">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="layout-4-column">
+        <a class="logo" href="#">logo</a>
+        <h4>Quick links</h4>
+        <ul class="footer__navigation-links">
+          <li>
+            <a href="#">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
